argocd/apps/forgejo/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: upgrade-scheme
  namespace: forgejo
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-http
  namespace: forgejo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`forge.mohsun.az`) && !PathPrefix(`/.well-known/acme-challenge/`)
      services:
        - name: forgejo-http
          port: 3000
      middlewares:
        - name: upgrade-scheme
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-https
  namespace: forgejo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`forge.mohsun.az`)
      services:
        - name: forgejo-http
          port: 8080
  tls:
    secretName: forge-mohsun-az-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirects
  namespace: forgejo
spec:
  redirectRegex:
    regex: "^https?://git\\.mohsun\\.az(.*)"
    replacement: "https://forge.mohsun.az${1}"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-old-http
  namespace: forgejo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`git.mohsun.az`) && !PathPrefix(`/.well-known/acme-challenge/`)
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: redirects
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-old-https
  namespace: forgejo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`git.mohsun.az`)
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: redirects
  tls:
    secretName: git-mohsun-az-tls
